too many changes to list. see the docs & srcs
* new target: //boot:coldstart
* verbose flags: //config/ocaml/link:verbose (compile, archive)
* dev protocol:  --//config:dev builds from coldstarted .baseline/bin
* lots of cmi deps fixes - sigs only depend on sigs
* some docs
* stdlib rules: kernel_*, stdlib_*, stdlib_internal_*
* build_tools: only for vm executor (cvt_emit)
* etc.

--- a/bzl/docs/notes/configuration.adoc
+++ b/bzl/docs/notes/configuration.adoc
@@ -104,7 +104,7 @@ Actual flags:
 
 * `-nostdlib` which means "no stdilb path", i.e. do not add the default stdlib path to search paths
 
-* `-nopervasies` undocumented and obsolete; originally Pervasives was
+* `-nopervasives` undocumented and obsolete; originally Pervasives was
   a module with basic ops for built-in types. Make log shows only used
   to compile camlinternalFormatBasics.ml[i] and stdlib.ml[i]
 
