bazelize all of testsuite/tests/basic, fix test rules, etc.
* move test rules and impls to bzl/rules/test

--- a/bzl/docs/queries.adoc
+++ b/bzl/docs/queries.adoc
@@ -43,6 +43,9 @@ You can add something like ` | dot -Tsvg > /tmp/deps.svg` to view the graph.
 
     bazel cquery "somepath(//lex:ocamllex, //runtime/caml:domain_state.h)" --output=graph --config=boot
 
+== providers
+
+    bazel cquery //testsuite/tests/lib-bigarray:Change_layout --output=starlark --starlark:expr="providers(target)"
 
 == examples
 
